# AgentCrewChat

./: .gitignore  LICENSE  README.md  pyproject.toml
client/: electron-builder.yml  index.html  package.json  vite.config.ts
client/electron/: main.cjs  python-manager.cjs
client/scripts/: wait-vite-electron.mjs
client/src/: App.tsx
client/src/components/: BrowserBlocked.tsx
client/src/services/: api.ts  websocket.ts
client/src/stores/: chatStore.ts  configStore.ts  taskStore.ts
client/src/styles/: globals.css
client/src/types/: index.ts
config/: manifest.json
config/skills/: find-skills.json  skill-vetter.json
docs/: README.md  backend.md  frontend.md  product.md
docs/superpowers/plans/: 2026-03-30-agentloom-v1.md  2026-03-30-model-connections.md  2026-03-31-client-ui-redesign.md
docs/superpowers/specs/: 2026-03-30-agentloom-design.md  2026-03-31-client-ui-redesign.md  (+1 more)
packaging/: agentcrewchat.spec  agentloom.spec
scripts/: build_backend.py
src/agentcrewchat/: __main__.py  bootstrap.py  paths.py
src/agentloom/: __main__.py  bootstrap.py  paths.py
tests/: test_architect_agent.py  test_blueprint.py  test_bootstrap_writable.py  test_connection_check.py  test_consultant_agent.py  test_graph_compile.py  test_graph_runner_chunks.py  test_llm_factory.py  test_model_connection_store.py  test_orchestrator.py  test_paths.py  test_react_agent.py  test_requirement.py  test_reviewer_agent.py  test_shell_runner.py  test_skill_import.py  test_skill_loader.py  test_skill_markdown.py  test_skill_registry.py  test_user_confirmation.py  test_workspace.py
(+104 files in other folders)
